--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A 2D representation of a Tak board in HTML and CSS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "browserify index.js -t [ stringify --extensions [.html .txt] ] -t babelify -o build.js",
+    "watch": "watchify index.js -t [ stringify --extensions [.html .txt] ] -t babelify -d -o build.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,26 @@
   "bugs": {
     "url": "https://github.com/TehShrike/tak-board/issues"
   },
-  "homepage": "https://github.com/TehShrike/tak-board#readme"
+  "homepage": "https://github.com/TehShrike/tak-board#readme",
+  "browser": "index.js",
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": "es2015"
+        }
+      ]
+    ]
+  },
+  "dependencies": {
+    "ractive": "0.7.3"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "6.6.0",
+    "babelify": "7.3.0",
+    "browserify": "13.0.1",
+    "stringify": "5.1.0",
+    "watchify": "3.7.0"
+  }
 }
