--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify index.js -t [ stringify --extensions [.html .txt] ] -t babelify -o build.js",
-    "watch": "watchify index.js -t [ stringify --extensions [.html .txt] ] -t babelify -d -o build.js"
+    "build": "npm run js && npm run css",
+    "js": "browserify index.js -t [ stringify --extensions [.html .txt] ] -t babelify -o build.js",
+    "watchjs": "watchify index.js -t [ stringify --extensions [.html .txt] ] -t babelify -d -o build.js",
+    "watchcss": "postcss -w --use precss -o build.css board-style.css",
+    "css": "postcss --use precss -o build.css board-style.css"
   },
   "repository": {
     "type": "git",
@@ -39,7 +42,10 @@
     "babel-preset-es2015": "6.6.0",
     "babelify": "7.3.0",
     "browserify": "13.0.1",
+    "postcss-cli": "^2.5.2",
+    "precss": "^1.4.0",
     "stringify": "5.1.0",
+    "tak-game": "0.0.0",
     "watchify": "3.7.0"
   }
 }
